# RayTracer

./: CMakeLists.txt  RayTracer.sln  readme.html
Debug/: RayTracer.ilk
include/: .cyTriMesh.h.swo  .cyTriMesh.h.swp  .materials.h.swp  .objects.h.swp  CImg.h  Math.h  PhotonGenerator.h  Renderer.h  cyBVH.h  cyTriMesh.h  lights.h  materials.h  objects.h  photonmap.h  scene.h  texture.h
prj13/: PhotonGenerator.h  Renderer.cpp  Renderer.h  Thumbs.db  Tracer.cpp  Tracer.h  cyColor.h  cyMatrix2.h  cyMatrix3.h  cyMatrix4.h  cyTriMesh.h  lights.cpp  lights.h  main.cpp  materials.cpp  materials.h  objects.h  prj13.vcxproj  prj13.vcxproj.filters  scene.h  texture.cpp  viewport.cpp  xmlload.cpp
prj13/Debug/: vc120.idb
prj13/Debug/RayTracer.tlog/: CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj13/Debug/prj13.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  prj13.lastbuildstate
prj13/Release/RayTracer.tlog/: CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj13/Release/prj13.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  (+2 more)
resources/: result.ppm  samples_falloff.ppm  scene4.xml
src/: .main.cpp.swp  .nfs000000001827b6f10000468b  CMakeLists.txt  PhotonGenerator.cpp  Renderer.cpp  Tracer.cpp  lights.cpp  main.cpp  materials.cpp  object.cpp  photonmap.cpp  texture.cpp  xmlload.cpp
